# rxn-ir-to-structure

./: .gitignore  LICENSE  README.md  log.lammps  pyproject.toml  requirements.txt  setup.cfg
examples/: smiles.csv
scripts/: gather_ir_data.py  prepare_data.py  run_md_pipeline.py  score.py  transformer_template.yaml
scripts/emsa/: emsa.py
scripts/mol_dyn/: emc_template.esh  gen_spectrum.py  pipeline.py  utils.py
src/ir_to_struc/: __init__.py
src/ir_to_struc/emsa/: emsa.py  emsc.py
src/ir_to_struc/mol_dyn/: gen_spectrum.py  pipeline.py  utils.py
src/ir_to_struc/scripts/: gather_ir_data.py  prepare_data.py  run_md_pipeline.py  run_training.py  score.py
templates/: lammps_template.in  transformer_template_tiny_cpu.yaml
workflows/: tests.yaml
